[tool.poetry]
name = "pyteomics4ml_jspp"
version = "0.1.0"
description = "Provides an intermediate layer between mass spec data and ML applications, such as encoding."
authors = ["J. Sebastian Paez <jspaezp@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">3.8,<3.11"
pyteomics = "^4.5.5"
torch = "^1.12.1"
numpy = "^1.23.2"
psims = { version = "^1.2.0", python = ">3.8,<3.11" }
lark = "^1.1.2"
pandas = "^1.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
flake8 = "^5.0.4"
pytest-doctestplus = "^0.12.0"
Flake8-pyproject = "^1.1.0"
tox = "^3.25.1"
pydocstringformatter = "^0.7.2"
autoflake = "^1.5.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
pymdown-extensions = "^9.5"
mkdocs-material = "^8.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
whitelist_externals =
  poetry
  bash
skip_install = true
commands =
    poetry install --all-extras
    poetry run pytest

[tox]
envlist = py{39,310}
isolated_build = true
"""

[tool.black]
target-version = [ "py39", ]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
min_python_version = "3.8.0"
max-line-length = 88
ban-relative-imports = true
# flake8-use-fstring: https://github.com/MichaelKim0407/flake8-use-fstring#--percent-greedy-and---format-greedy
format-greedy = 1
inline-quotes = "double"
ignore = "E203,W503"
per-file-ignores = "*/__init__.py: F401"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = [
    "tests",
    "pyteomics4ml_jspp",
]
