[tool.poetry]
name = "ms2ml"
version = "0.0.22"
description = "Provides an intermediate layer between mass spec data and ML applications, such as encoding."
authors = ["J. Sebastian Paez <jspaezp@users.noreply.github.com>"]
license = "Apache 2.0"
include = ["ms2ml/unimod/unimod.xml"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyteomics = "^4.5.5"
lxml = "^4.9.1" # Needed due to a non-exclicit dependency in pyteomics
# torch = { version = "^1.12.1", python = ">=3.8,<3.11" }
numpy = "^1.23.2"
psims = { version = "^1.2.0", python = ">3.8,<3.11" }
lark = "^1.1.2"
pandas = "^1.4.4"
pandas-stubs = { version = "^1.5.1.221024", python = ">=3.8,<3.11" }
uniplot = "^0.7.0"
tqdm = "^4.64.1"
importlib-metadata = { version = "^5.0.0", python = ">=3.8,<3.9" }
loguru = "^0.6.0"
tomli-w = "^1.0.0"
appdirs = "^1.4.4"
tomli = "^2.0.1"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
ruff = "^0.0.46"
autoflake = "^1.5.3"
pylint = "^2.15.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
pytest-doctestplus = "^0.12.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
ruff = "^0.0.46"
autoflake = "^1.5.3"
pylint = "^2.15.2"
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
pytest-doctestplus = "^0.12.0"
pytest-cov = "^4.0.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
pymdown-extensions = "^9.5"
mkdocs-material = "^8.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkquartodocs = "^0.5.7"

[tool.poetry.group.plotting.dependencies]
matplotlib = "^3.6.0"
# Need to restrict explicitly the python version until llvm (numba)
# catches up with the python version
spectrum-utils = {version = "^0.4.1", python = ">=3.8,<3.11"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
whitelist_externals = poetry
commands =
    poetry install --all-extras
    poetry run python --version
    poetry run pytest --import-mode importlib

[tox]
envlist = py{38,39,310,311}
isolated_build = true
"""

[tool.black]
target-version = [ "py39", ]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = [
    "tests",
    "ms2ml",
]

[tool.pydocstringformatter]
style = "numpydoc"
exclude = [".tox/**"]
max-line-length = 88

[tool.pylint]
load-plugins= 'pylint.extensions.docparams'
# disable = "C0103"
