[tool.poetry]
name = "ms2ml"
version = "0.0.46"
description = "Provides an intermediate layer between mass spec data and ML applications, such as encoding."
authors = ["J. Sebastian Paez <jspaezp@users.noreply.github.com>"]
license = "Apache 2.0"
include = ["ms2ml/unimod/unimod.xml"]
readme = "README.md"
homepage = "https://jspaezp.github.io/ms2ml/main"
repository = "https://github.com/jspaezp/ms2ml"

[tool.poetry.dependencies]
python = ">3.9,<3.14"
pyteomics = "^4.6.3"
lxml = "^4.9.1"                                                      # Needed due to a non-exclicit dependency in pyteomics
numpy = "^2.0.2"
psims = "^1.2.3"
lark = "^1.1.2"
pandas = "^2.0.1"
pandas-stubs = { version = "^2.0.2.230605", python = ">=3.8,<3.11" }
# uniplot = ">=0.7,<0.9"
uniplot = "^0.10.2"
tqdm = "^4.64.1"
importlib-metadata = ">=6,<9"
loguru = ">=0.6,<0.8"
tomli-w = "^1.0.0"
appdirs = "^1.4.4"
tomli = "^2.0.1"

[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
isort = "^5.10.1"
ruff = "^0.1.0"
autoflake = "^1.5.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
pytest-doctestplus = "^0.12.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.10.1"
ruff = "^0.1.0"
autoflake = "^1.5.3"
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
pytest-doctestplus = "^0.12.0"
pytest-cov = "^4.0.0"
tox = ">=3.25.1,<5.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
pymdown-extensions = "^10.0"
mkdocs-material = ">=8.4.2,<10.0.0"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.25" }
mkquartodocs = "^0.5.7"
mike = "^1.1.2"
griffe = ">=0.36.9,<0.42.0"

[tool.poetry.group.plotting]
optional = true

[tool.poetry.group.plotting.dependencies]
# Need to restrict explicitly the python version until llvm (numba)
# catches up with the python version ... which also requires specifying
# all of these dependencies explicitly.
spectrum-utils = { version = "^0.4.2", python = ">3.8,<3.12" }
matplotlib = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
whitelist_externals = poetry
commands =
    poetry install --all-extras
    poetry run python --version
    poetry run pytest --import-mode importlib

[tox]
envlist = py{38,39,310,311}
isolated_build = true
"""

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
extend-select = ["I", "PL", "RUF", "NPY", "T20", "T100"]
# TODO add ANN and N
# PLR0913 = too many arguments
# PLW2901 = for loop variable over-written
# NPY002 = Replace legacy `np.random.uniform` call with `np.random.Generator`
ignore = ["F811", "PLR0913", "PLW2901", "NPY002"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"notebooks/**" = ["PLR2004", "T20"]
"**/{tests}/*" = ["PLR2004", "RUF012"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = ["tests", "ms2ml"]

[tool.pydocstringformatter]
style = "numpydoc"
exclude = [".tox/**"]
max-line-length = 88

[tool.pylint]
load-plugins = 'pylint.extensions.docparams'
# disable = "C0103"
